implemented list view to restaurant, added restaurant modal

--- a/app/assets/stylesheets/components/_modalrestaurant.scss
+++ b/app/assets/stylesheets/components/_modalrestaurant.scss
@@ -1,4 +1,4 @@
-
+/* 1. HEAD, TAGS REVIEW, BUTTON */
 .restaurant-headline {
     font-family: 'Red Hat Display', sans-serif;
     font-style: normal;
@@ -27,7 +27,7 @@
     color: white;
 }
 
-
+/* 2. Dashboard = */
 .restaurant-dashboard-container {
     padding-top: 15px;
     padding-bottom: 15px;
@@ -79,7 +79,7 @@
     background-color: $shadow;
 }
 
-
+/* REVIEWS */
 .restaurant-review-container {
 
 }
