--- a/app/views/dishes/_dish_infos.html.erb
+++ b/app/views/dishes/_dish_infos.html.erb
@@ -12,23 +12,23 @@
             <div class="container-fluid">
               <div class="row dishlist-title"><%= dish.name %></div>
               <div class="row dishlist-tags">
-                tags, tags, tags
+                <%= dish.country %>
                 <% dish.restaurants.name %> <!-- Link to doesnt work -->
               </div>
               <div class="row">
                 <div class="container-fluid dishlist-dashboard-container">
                   <div class="row">
                     <div class="col">
-                      <div class="dishlist-dashboard-title">HOURS</div>
-                      <div class="dishlist-dashboard-content">Open</div>
+                      <div class="dishlist-dashboard-title">SPICE</div>
+                      <div class="dishlist-dashboard-content">HOOOT</div>
                     </div>
                     <div class="col">
                       <div class="dishlist-dashboard-title">RATING</div>
                       <div class="dishlist-dashboard-content">4.5</div>
                     </div>
                     <div class="col">
-                      <div class="dishlist-dashboard-title">DISTANCE</div>
-                      <div class="dishlist-dashboard-content">2.5 km</div>
+                      <div class="dishlist-dashboard-title">PLACE</div>
+                      <div class="dishlist-dashboard-content">holder</div>
                     </div>
                   </div>
                 </div>
