--- a/app/views/restaurants/_restaurant_card.html.erb
+++ b/app/views/restaurants/_restaurant_card.html.erb
@@ -1,22 +1,37 @@
-<div class="restaurant-card" data-controller="edit-restaurant" data-edit-restaurant-target="card">
-  <div class="row">
-    <div class="card mb-3 cards-for-restaurants">
-      <div class="row no-gutters">
-        <div class="col-4">
-          <img class="image-for-card" src="https://images.unsplash.com/photo-1508424757105-b6d5ad9329d0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80" class="card-img" alt="food!">
-        </div>
-        <div class="col-8">
-          <div class="card-body">
-            <p class="card-title"><%= restaurant.name %></p>
-          <div>
-            <div class="d-flex justify-content-start">
-              <p>Hours</p>
-              <p class='mx-3'>Rating</p>
-              <p class='mx-3'>Distance</p>
+<div class="dishlist-container" data-controller="edit-restaurant" data-edit-dish-target="card">
+  
+    <div class="card dishlist-card" >
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-4">
+            <%= image_tag("tony_400.jpg", class: "dishlist-picture") %>
           </div>
+          <div class="col-8 dishlist-right">
+            <div class="container-fluid">
+              <div class="row dishlist-title"><%= restaurant.name %></div>
+              <div class="row dishlist-tags">
+                <%= restaurant.address %>
+              </div>
+              <div class="row">
+                <div class="container-fluid dishlist-dashboard-container">
+                  <div class="row">
+                    <div class="col">
+                      <div class="dishlist-dashboard-title">HOURS</div>
+                      <div class="dishlist-dashboard-content">Open</div>
+                    </div>
+                    <div class="col">
+                      <div class="dishlist-dashboard-title">RATING</div>
+                      <div class="dishlist-dashboard-content">4.5</div>
+                    </div>
+                    <div class="col">
+                      <div class="dishlist-dashboard-title">DISTANCE</div>
+                      <div class="dishlist-dashboard-content">2.8</div>
+                    </div>
+                  </div>
+                </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 </div>
