--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -27,13 +27,13 @@
   </div>
 
   <!-- Rendered Dish-List -->
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
-      <div class="col">
-        <div class="col-xs-12 col-sm-8 offset-sm-2">
+      
+        
           <%= render 'list', dishes: @dishes %>
-        </div>
-      </div>
+        
+      
     </div>
   </div>
 
