--- a/app/views/restaurants/_restaurant_modal.html.erb
+++ b/app/views/restaurants/_restaurant_modal.html.erb
@@ -1,18 +1,165 @@
 <!-- Modal -->
-<div class="modal animate__animated animate__fadeIn animate__faster" id="restaurantModal<%= index %>" tabindex="-1" aria-labelledby="restaurantModalLabel" aria-hidden="true">
-  <div class="modal-dialog border border-0 border-rounded-3" style="transform: translate(-25%);">
-    <div class="modal-content modalforrestaurant">
-      <div class="modal-header">
-      <div class="modal-title">
-        <h2 class="font-weight-bold mx-4" id="restaurantModalLabel"><%= restaurant.name %></h2>
-      </div>
-      </div>
-      <div class="modal-body">
-        <div class="description">
-          <p> <%= restaurant.address %> </p>
+  <div class="modal animate__animated animate__fadeIn animate__faster" id="restaurantModal<%= index %>" tabindex="-1" aria-labelledby="restaurantModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-scrollable border border-0 border-rounded-3" style="transform: translate(-25%);">
+      <div class="modal-content">
+        
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel"></h5>
+        </div>
+
+        <div class="modal-body">
+          <div class="container-fluid">
+
+            <!-- 1. Title / Review Button -->
+            <div class="row">
+              <div class="col restaurant-headline"><%= restaurant.name %></div>
+              <div class="col d-grid gap-2">
+                <button type="button" class="btn btn-primary restaurant-review">Write a review</button>
+              </div>
+            </div>
+
+            <!-- 2. Tags / Dashboard -->
+            <div class="row">
+              <div class="col">
+                <div class="container-fluid">
+                  <div class="row">
+                    <div class="col restaurant-tags">Tonkotsu Ramen</div>
+                    <div class="col restaurant-tags">Shoyo Ramen</div>
+                    <div class="col restaurant-tags">Daniel Ramen</div>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="container-fluid restaurant-dashboard-container">
+                  <div class="row">
+                    <div class="col">
+                      <div class="restaurant-dashboard-title">HOURS</div>
+                      <div class="restaurant-dashboard-content">Open</div>
+                    </div>
+                    <div class="col">
+                      <div class="restaurant-dashboard-title">RATING</div>
+                      <div class="restaurant-dashboard-content">4.5</div>
+                    </div>
+                    <div class="col">
+                      <div class="restaurant-dashboard-title">DISTANCE</div>
+                      <div class="restaurant-dashboard-content">2.5 km</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- 3. Text / Map -->
+            <div class="row">
+              <div class="col-6">
+                <%= restaurant.address %>
+                Takumi Nine is the sister restaurant of a ramen shop in Düsseldorf, the German city that boasts the largest community of expat Japanese and hence also the largest number of Japanese restaurants. The man behind Takumi Nine Berlin goes by the name of Yusuke Minamiyama and is also the Ramenmeister behind the tiny cooking section at Takumi Nine. He took over the venue from former Okonomiyaki eatery Hanage who sadly decided to stop treating me with their divine fried chicken karaage.
+
+                Takumi Nine didn’t really change much of the Hanage venue except the equipment of the kitchen. This means around 20 seats in a tiny venue. The menu at Takumi Nine is pretty substantial and offers 16 different bowls of ramen along with a
+              </div >
+
+              <div class="col-6 restaurant-map-container">
+                <%= image_tag("map_cocolo_460.png", class: "img-fluid restaurant-map") %>
+                <div class="container-fluid">
+
+                    <!-- 4. Text / Share-Button-Board -->
+                    <div class="row">
+                      <div class="col  d-grid gap-2">
+                        <div class="container-fluid restaurant-button-container">
+                          <div class="row">
+                            <div class="col">
+                              <button class="btn restaurant-button" type="submit">
+                                <%= image_tag("icon_telephone.png", class: "restaurant-button-icon") %>
+                                
+                              </button>
+                            </div>
+                            <div class="col">
+                              <button class="btn restaurant-button" type="submit">
+                                <%= image_tag("icon_home.png", class: "restaurant-button-icon") %>
+                                
+                              </button>
+                            </div>
+                            <div class="col">
+                              <button class="btn restaurant-button" type="submit">
+                                <%= image_tag("icon_heart.png", class: "restaurant-button-icon") %>
+                                
+                              </button>
+                            </div>
+                            <div class="col">
+                              <button class="btn restaurant-button" type="submit">
+                                <%= image_tag("icon_upload.png", class: "restaurant-button-icon") %>
+                                
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <!-- . Text / Opening Hours -->
+                    <div class="row">
+                      <div class="col">
+                        <div class="accordion  restaurant-hours" id="accordionExample">
+                          <div class="accordion-item restaurant-hours">
+                            <h2 class="accordion-header" id="headingOne">
+                              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">                              
+                                <p>11:00 - 22:00</p>
+                              </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse " aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                              <div class="accordion-body">
+                                <p>MON closed</p>
+                                <p>TUE 11:00 - 22:00</p>
+                                <p>WED 11:00 - 22:00</p>
+                                <p>THU 11:00 - 22:00</p>
+                                <p>FRI 11:00 - 24:00</p>
+                                <p>SAT 11:00 - 24:00</p>
+                                <p>SUN 14:00 - 22:00</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- 5. Review Cards -->
+          <div class="container-fluid restaurant-review-container">
+            <div class="row">
+              <div class="card restaurant-review-card" style="width: 24rem;">
+                <div class="card-body">
+                  <p class="card-text">I love japanese cosplay as much as I love this ramen place. I wish they’d dress up like me, though.</p>
+                </div>
+                <div class="container-fluid">
+                  <div class="row">
+                    <div class="col-3">
+                      <%= image_tag("tony_400.jpg", class: "img-fluid restaurant-review-picture") %>
+                    </div>
+                    <div class="col-9">
+                      <div class="container-fluid">
+                        <div class="row">Tony Heinrich</div>
+                        <div class="row">
+                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
+                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
+                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
+                          <%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+
       <div class="modal-footer">
+        
       </div>
     </div>
   </div>
