fixed dish modal

--- a/app/views/dishes/_dish_modal.html.erb
+++ b/app/views/dishes/_dish_modal.html.erb
@@ -13,8 +13,8 @@
         <p><% @dishrestaurants %></p>
       </div>
       </div>
-      <div class="modal-body">
-        <img src=<%= dish.image_url %> alt=<%= dish.name %>>
+      <div class="modal-body-new">
+        <img src=<%= dish.image_url %> alt=<%= dish.name %> class="">
         <div class="description">
           <p> <%= dish.description %> </p>
         </div>
