--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -27,13 +27,13 @@
   </div>
 
   <!-- Rendered Dish-List -->
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
-      
-        
+      <div class="col">
+        <div class="col-xs-12 col-sm-6 "> <!-- TODO: adjust grid -->
           <%= render 'list', dishes: @dishes %>
-        
-      
+        </div>
+      </div>
     </div>
   </div>
 
