--- a/app/views/restaurants/_restaurant_modal.html.erb
+++ b/app/views/restaurants/_restaurant_modal.html.erb
@@ -23,9 +23,10 @@
               <div class="col">
                 <div class="container-fluid">
                   <div class="row">
-                    <div class="col restaurant-tags">Tonkotsu Ramen</div>
-                    <div class="col restaurant-tags">Shoyo Ramen</div>
-                    <div class="col restaurant-tags">Daniel Ramen</div>
+                    <% restaurant.dishes.each do |dish| %>
+                      <div class="col restaurant-tags"><%= dish.name %></div>
+                    <% end %>
+                    
                   </div>
                 </div>
               </div>
