--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,14 +1,10 @@
 <h1>Add a Restaurant</h1>
-<!--
-<form action="restaurants" method="POST">
-  <label for="name">Name</label>
-  <input type="text" name="restaurant[nam}" requiered>
-  <input type="submit" value="Save">
-</form>
--->
-<%= form_for @restaurant do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.text_field :address %>
-  <%= f.submit %>
-<% end %>
+<div class="form">
+  <%= form_for @restaurant do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name %><br>
+    <%= f.label :address %>
+    <%= f.text_field :address %><br>
+    <%= f.submit %>
+  <% end %>
+</div>
