preparing to add opening hours

--- a/app/views/restaurants/_restaurant_modal.html.erb
+++ b/app/views/restaurants/_restaurant_modal.html.erb
@@ -23,6 +23,7 @@
               <div class="col">
                 <div class="container-fluid">
                   <div class="row">
+                    <!-- Renders dishes that are made in that restaurant -->
                     <% restaurant.dishes.each do |dish| %>
                       <div class="col restaurant-tags"><%= dish.name %></div>
                     <% end %>
