--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,10 +1,9 @@
 <h1>Add a Restaurant</h1>
 <div class="form">
-  <%= form_for @restaurant do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %><br>
-    <%= f.label :address %>
-    <%= f.text_field :address %><br>
+  <%= simple_form_for(@restaurant) do |f| %>
+    <%= f.input :name %>
+    <%= f.input :address %>
+    <%= f.input :rating %>
     <%= f.submit %>
   <% end %>
 </div>
