--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -6,7 +6,7 @@
     <div class="banner-head d-flex">
         <p class="banner-dish">Dish-List</p>
 
-        <%= form_with url: root_path, method: :get, html: { class: 'sebis', data: {search_dishes_target: 'form' } }  do |f| %>
+        <%= form_with url: root_path, method: :get, html: { autocomplete: "off",  class: 'sebis', data: {search_dishes_target: 'form' } } do |f| %>
           <%= f.text_field :query, placeholder: 'type a country', value: params[:query], class: 'banner-country', data: { search_dishes_target: 'input', action: 'keyup->search-dishes#update' } %>
         <% end %>
     </div>
