Added reviews for restaurant modals

--- a/app/views/restaurants/_review_form.html.erb
+++ b/app/views/restaurants/_review_form.html.erb
@@ -1,16 +1,18 @@
+ <% @review = Review.new() %>
 
-<% @review = Review.new(user_id: current_user.id) %>
+  <%= simple_form_for(@review) do |f| %>
+    <p>What dish are you reviewing?</p>
+    <%= f.input :dish, collection: restaurant.dishes %>
 
-<%= form_for(@review) do |f| %>
+    <p>How authentic was the dish. 0 (poor) - 5 (great).</p>
+    <%= f.input :authenticity, label: "Authenticity", min: 0, max: 5, size: 5, autofocus: true %>
 
-  <p>What dish are you reviewing?</p>
-  <%= f.select :dish_restaurant_id, label: "Dish" %>
+    <p>How is the value?. 0 (poor) - 5 (great).</p>
+    <%= f.input :value, label: "Authenticity", min: 0, max: 5, size: 5, autofocus: true %>
 
-  <p>Select a rating for the dish. 0 (poor) - 5 (great).</p>
-  <%= f.number_field :rating, label: "Rating", min: 0, max: 5, size: 5, autofocus: true %>
+    <p>Add a comment.</p>
+    <%= f.input :description, label: "Comment", size: "30x10" %>
 
-  <p>Add a comment.</p>
-  <%= f.text_area :description, label: "Comment", size: "30x10" %>
-
+      <%= hidden_field_tag 'restaurant', restaurant.id %>
   <%= f.submit %>
 <% end %>
