--- a/app/views/restaurants/_restaurant_modal.html.erb
+++ b/app/views/restaurants/_restaurant_modal.html.erb
@@ -13,9 +13,6 @@
             <!-- 1. Title / Review Button -->
             <div class="row">
               <div class="col restaurant-headline"><%= restaurant.name %></div>
-              <div class="col d-grid gap-2">
-                <button type="button" class="btn btn-primary restaurant-review">Write a review</button>
-              </div>
             </div>
 
             <!-- 2. Tags / Dashboard -->
@@ -152,6 +149,21 @@
                         </div>
                       </div>
                     </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+            <div class="accordion accordion-flush mt-3" id="accordionFlushExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingOne">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    Add a review
+                  </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">
+                    <%= render 'review_form', restaurant: restaurant %>
                   </div>
                 </div>
               </div>
