--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,8 +1,9 @@
 <h1>Add a Restaurant</h1>
-<div class="new_restaurant_form">
+<div class="restaurant_form">
   <%= simple_form_for(@restaurant) do |f| %>
-    <%= f.input :name %>
-    <%= f.input :address %>
+    <%= f.input :name, required: true %>
+    <%= f.input :address, required: true, hint: "Enter the street and city" %>
+    <%= f.input :address, as: :country %>
     <%= f.submit %>
   <% end %>
 </div>
