added opening hours validation to restauratn modal

--- a/app/assets/stylesheets/components/_modalrestaurant.scss
+++ b/app/assets/stylesheets/components/_modalrestaurant.scss
@@ -46,6 +46,10 @@
     font-size: 1em;
     color: $text-color;
 }
+.restaurant-dashboard-content-open {
+    color: $green;
+    font-weight: 500;
+}
 
 .restaurant-map-container {
     border-radius: 30%;
