added red colour to when the restaurant is closed

--- a/app/assets/stylesheets/components/_modalrestaurant.scss
+++ b/app/assets/stylesheets/components/_modalrestaurant.scss
@@ -50,6 +50,10 @@
     color: $green;
     font-weight: 500;
 }
+.restaurant-dashboard-content-closed {
+    color: $red;
+    font-weight: 500;
+}
 
 .restaurant-map-container {
     border-radius: 30%;
