--- a/app/views/restaurants/_restaurant_card.html.erb
+++ b/app/views/restaurants/_restaurant_card.html.erb
@@ -17,7 +17,15 @@
                   <div class="row">
                     <div class="col">
                       <div class="dishlist-dashboard-title">HOURS</div>
-                      <div class="dishlist-dashboard-content">Open</div>
+                      <div class="dishlist-dashboard-content">
+                        <!-- Validating if a restaurant is open -->
+                        <% week = restaurant.openings %>
+                        <% if @timenow >= week[@daynow].start_hour && @timenow <= week[@daynow].end_hour %>
+                          <div class="restaurant-dashboard-content-open">Open</div>
+                        <% else %>
+                          <div class="restaurant-dashboard-content-closed">Closed</div>
+                        <% end %>
+                      </div>
                     </div>
                     <div class="col">
                       <div class="dishlist-dashboard-title">RATING</div>
