--- a/app/views/restaurants/_restaurant_modal.html.erb
+++ b/app/views/restaurants/_restaurant_modal.html.erb
@@ -42,7 +42,7 @@
                         <% if @timenow >= week[@daynow].start_hour && @timenow <= week[@daynow].end_hour %>
                           <div class="restaurant-dashboard-content-open">Open</div>
                         <% else %>
-                          <div class="restaurant-dashboard-content">closed</div>
+                          <div class="restaurant-dashboard-content-closed">Closed</div>
                         <% end %>
                       
                     </div>
