Added map to restaurant modal

--- a/app/views/restaurants/_restaurant_card.html.erb
+++ b/app/views/restaurants/_restaurant_card.html.erb
@@ -1,10 +1,10 @@
 <div class="dishlist-container" data-controller="edit-restaurant" data-edit-dish-target="card">
-  
+
     <div class="card dishlist-card" >
       <div class="container-fluid">
         <div class="row">
           <div class="col-4">
-            <%= image_tag("tony_400.jpg", class: "dishlist-picture") %>
+            <%= image_tag("pizza_400.png", class: "dishlist-picture") %>
           </div>
           <div class="col-8 dishlist-right">
             <div class="container-fluid">
