--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,6 +10,13 @@
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
+
+    <%= f.input :firstname,
+                required: false,
+                input_html: { autocomplete: "firstname" }%>
+    <%= f.input :lastname,
+                required: false,
+                input_html: { autocomplete: "lastname" }%>
     <%= f.input :password,
                 hint: "leave it blank if you don't want to change it",
                 required: false,
