--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -3,6 +3,8 @@
   <%= simple_form_for(@restaurant) do |f| %>
     <%= f.input :name, required: true %>
     <%= f.input :address, required: true, hint: "Enter the street and city" %>
+    <%= f.input :telephone, required: true, hint: "exp. +49 30 0000 000" %>
+    <%= f.input :website, required: true, hint: "www.sample.com" %>
     <%= f.input :address, as: :country %>
     <%= f.submit %>
   <% end %>
